refactor: Fix nullability issues